--- a/ios/TelkomFinanceApp.xcodeproj/xcshareddata/xcschemes/TelkomFinanceApp.xcscheme
+++ b/ios/TelkomFinanceApp.xcodeproj/xcshareddata/xcschemes/TelkomFinanceApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AlbanatikaStore.app"
-               BlueprintName = "AlbanatikaStore"
-               ReferencedContainer = "container:AlbanatikaStore.xcodeproj">
+               BuildableName = "TelkomFinanceApp.app"
+               BlueprintName = "TelkomFinanceApp"
+               ReferencedContainer = "container:TelkomFinanceApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AlbanatikaStoreTests.xctest"
-               BlueprintName = "AlbanatikaStoreTests"
-               ReferencedContainer = "container:AlbanatikaStore.xcodeproj">
+               BuildableName = "TelkomFinanceAppTests.xctest"
+               BlueprintName = "TelkomFinanceAppTests"
+               ReferencedContainer = "container:TelkomFinanceApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AlbanatikaStore.app"
-            BlueprintName = "AlbanatikaStore"
-            ReferencedContainer = "container:AlbanatikaStore.xcodeproj">
+            BuildableName = "TelkomFinanceApp.app"
+            BlueprintName = "TelkomFinanceApp"
+            ReferencedContainer = "container:TelkomFinanceApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AlbanatikaStore.app"
-            BlueprintName = "AlbanatikaStore"
-            ReferencedContainer = "container:AlbanatikaStore.xcodeproj">
+            BuildableName = "TelkomFinanceApp.app"
+            BlueprintName = "TelkomFinanceApp"
+            ReferencedContainer = "container:TelkomFinanceApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
