--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AlbanatikaStore",
+  "name": "TelkomFinanceApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,8 +16,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "numeral": "^2.0.6",
@@ -43,6 +44,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
