--- a/package.json
+++ b/package.json
@@ -11,36 +11,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-picker/picker": "^2.7.7",
-    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-calendars": "^1.1305.0",
     "react-native-config": "^1.5.2",
-    "react-native-currency-input": "^1.1.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.16.2",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.3.3",
-    "react-native-picker-select": "^9.1.3",
-    "react-native-pie-chart": "^3.0.2",
-    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-shimmer-placeholder": "^2.0.9",
-    "react-native-svg": "^15.3.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
@@ -60,6 +48,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
